5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3465/executions/1756_1580.log
== TEST (2019-05-29 02:56:45) 
-- CODE:
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	else:
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,round(media/len(nota),2),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input("")))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:56:56) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	else:
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,round(media/len(nota),2),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:57:30) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	else:
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,round(media/len(v),2),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:57:57) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,round(media/len(v),2),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:58:27) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,media/len(v),2,aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:59:42) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,media/len(v),2,aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:59:53) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,media/len(v),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:01:03) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/len(v),2))
print(aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:01:03) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante,aprovados,reprovados,round(media/len(v),2),aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:01:03) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/len(v),2))
print(aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:01:38) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/len(v),2))
print(aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 03:01:52) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	media+=v[i]
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/len(v),2))
print(aluno[maior])
-- EXECUTION TIME:
0.49036
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
3.5
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
1.0
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:03:16) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	else:
		media+=v[i]
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/len(v),2))
print(aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 03:04:26) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
n= 0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	else:
		media+=v[i]
		n+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/n,2))
print(aluno[maior])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 03:04:33) 
-- CODE:
from numpy import *
v = array(eval(input("")))
aluno = array(eval(input("")))
i = 0
faltante = 0
aprovados = 0
reprovados = 0
media = 0.0
n= 0
maior = 0
while(i<len(v)):
	if(v[i]==-1):
		faltante+=1
	else:
		media+=v[i]
		n+=1
	if(v[i]>=6):
		aprovados+=1
	if(v[i]<6 and v[i]>-1):
		reprovados+=1
	
	if(v[maior]<v[i]):
		maior = i
	i+=1
print(faltante)
print(aprovados)
print(reprovados)
print(round(media/n,2))
print(aluno[maior])
-- EXECUTION TIME:
0.37801
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
